--- a/node/config.json
+++ b/node/config.json
@@ -4,5 +4,6 @@
 	"brand":"elro",
 	"code":31,
 	"switch":"C",
-	"icon":"glyphicon glyphicon-off"
+	"icon":"glyphicon glyphicon-off",
+	"state":0
 }]
