--- a/node/package.json
+++ b/node/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "home",
-  "description": "home app for gpio",
-  "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "express": "3.x",
-    "socket.io":"0.9.x",
-    "sys":"0.0.1",
-    "ssh2":"0.2.x"
-  }
+    "name": "home",
+    "description": "home app for gpio",
+    "version": "0.0.1",
+    "private": true,
+    "dependencies": {
+        "express": "3.x",
+        "socket.io": "0.9.x",
+        "sys": "0.0.1",
+        "ssh2": "0.2.x",
+        "speakeasy": "1.3.x"
+    }
 }
