--- a/node/package.json
+++ b/node/package.json
@@ -8,6 +8,7 @@
         "socket.io": "0.9.x",
         "sys": "0.0.1",
         "ssh2": "0.2.x",
-        "speakeasy": "1.0.x"
+        "speakeasy": "1.0.x",
+        "gitlab-webhook": "0.2.x"
     }
 }
