--- a/node/package.json
+++ b/node/package.json
@@ -10,6 +10,7 @@
         "ssh2": "0.2.x",
         "speakeasy": "1.0.x",
         "gitlab-webhook": "0.2.x",
-        "node-localstorage": "0.3.x"
+        "node-localstorage": "0.3.x",
+        "net-ping": "1.1.x"
     }
 }
