Add boxcar notifications.... Boxcar not suitable, try other

--- a/node/config.json
+++ b/node/config.json
@@ -83,5 +83,9 @@
         "ip": "192.168.0.20",
         "icon": "glyphicon glyphicon-phone",
         "state": 0
+    }],
+    "boxcar": [{
+        "email": "agtrstcjohfd@bxc.io",
+        "token": "96qfN7dntmOzhN9ZT67Z"
     }]
 }
