--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,7 @@
         "speakeasy": "1.0.x",
         "gitlab-webhook": "0.2.x",
         "node-localstorage": "0.3.x",
-        "net-ping": "1.1.x"
+        "net-ping": "1.1.x",
+        "node-curl": "0.3.x"
     }
 }
