--- a/node/package.json
+++ b/node/package.json
@@ -12,6 +12,8 @@
         "gitlab-webhook": "0.2.x",
         "node-localstorage": "0.3.x",
         "net-ping": "1.1.x",
-        "node-curl": "0.3.x"
+        "node-curl": "0.3.x",
+        "request": "2.x",
+        "requestify": "0.x"
     }
 }
