--- a/node/package.json
+++ b/node/package.json
@@ -3,6 +3,11 @@
     "description": "home app for gpio",
     "version": "0.0.1",
     "private": true,
+    "repository": {
+        "type": "git",
+        "url": "https://git.tomasharkema.nl/root/raspberrypi.git"
+    },
+    "version": "0.1.6.3",
     "dependencies": {
         "express": "3.x",
         "socket.io": "0.9.x",
