--- a/node/config.json
+++ b/node/config.json
@@ -84,8 +84,21 @@
         "icon": "glyphicon glyphicon-phone",
         "state": 0
     }],
-    "boxcar": [{
-        "email": "agtrstcjohfd@bxc.io",
-        "token": "96qfN7dntmOzhN9ZT67Z"
-    }]
+    "PIR": {
+        "onDetectYes": [{
+            "type": "switch",
+            "switch": 0,
+            "to": 1,
+            "delay": 1
+        }, {
+            "type": "alarm",
+            "message": "ALARM! AN INTRUDER DETECTED!!!"
+        }],
+        "onDetectNo": [{
+            "type": "switch",
+            "switch": 0,
+            "to": 0,
+            "delay": 600000
+        }]
+    }
 }
