--- a/node/config.json
+++ b/node/config.json
@@ -91,8 +91,10 @@
             "to": 1,
             "delay": 1,
             "time": true,
-            "from": 19,
-            "till": 6
+            "between": [
+                [0, 6],
+                [17, 23]
+            ]
         }, {
             "type": "alarm",
             "message": "ALARM! AN INTRUDER DETECTED!!!"
