--- a/node/config.json
+++ b/node/config.json
@@ -90,11 +90,8 @@
             "switch": 0,
             "to": 1,
             "delay": 1,
-            "time": true,
-            "between": [
-                [0, 6],
-                [19, 24]
-            ]
+            "light": true,
+            "lessThan": 6
         }, {
             "type": "alarm",
             "message": "ALARM! AN INTRUDER DETECTED!!!"
