--- a/node/package.json
+++ b/node/package.json
@@ -15,6 +15,6 @@
         "gitlab-webhook": "0.x",
         "node-localstorage": "0.3.x",
         "net-ping": "1.x",
-        "appcache-node": "0.x"
+        "connect-offline": "1.x"
     }
 }
